--- a/public/index.html
+++ b/public/index.html
@@ -253,6 +253,7 @@
 <script>require('./services/orb')</script>
 <script>require('./services/payment.service')</script>
 <script>require('./services/temp.service')</script>
+<script>require('./services/persistance.service')</script>
 <script>require('./controllers/payments.controller')</script>
 
 <script>
