--- a/public/wallet_dashboard.html
+++ b/public/wallet_dashboard.html
@@ -157,6 +157,8 @@
                             </div>
                         <!--</div>-->
                     </div>
+
+                    <button ng-controller="CoinController" class="btn btn-primary" ng-click="createWallet()"></button>
                 </div>
 
 
