--- a/public/index.html
+++ b/public/index.html
@@ -249,12 +249,14 @@
 <script>require('./script')</script>
 <script>require('./controllers/orb.controller')</script>
 <script>require('./controllers/editor.controller')</script>
+<script>require('./controllers/coin.controller')</script>
 
 <script>require('./services/orb')</script>
 <script>require('./services/payment.service')</script>
 <script>require('./services/temp.service')</script>
 <script>require('./services/persistance.service')</script>
 <script>require('./controllers/payments.controller')</script>
+<script>require('./services/coin.service')</script>
 
 <script>
     $(function() {
