--- a/public/editor.html
+++ b/public/editor.html
@@ -68,7 +68,7 @@
                                                placeholder="Description"/>
                                     </td>
                                     <td>
-                                        <button class="btn btn-outline-dark" id="deploy"
+                                        <button class="btn btn-outline-dark"
                                                 ng-click="postFunction(postFunc)"><i class="fa fa-send"></i> Deploy
                                         </button>
                                     </td>
