--- a/public/callFunction.html
+++ b/public/callFunction.html
@@ -3,15 +3,24 @@
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
-            <a href="dashboard.html">Dashboard</a>
+            <a>Dashboard</a>
         </li>
-        <li class="breadcrumb-item active">Call Functions {{qwe}}</li>
+        <li class="breadcrumb-item active">Call Functions</li>
     </ol>
+    <div ng-controller="orbController" id="progressAA" style="margin-bottom: 10px" class="col-md-12">
+        <div class="progress">
+            <div  class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+        </div>
+    </div>
+
     <div class="col-md-12" id="code"></div>
+
+
     <div class="card mb-3">
         <div class="card-body">
             <div class="container-fluid">
                     <div class="row">
+
 
                     <div class="col-md-6 col-sm-6 col-lg-6">
 
@@ -48,19 +57,27 @@
                                 <table class="table table-responsive">
                                     <tbody>
                                     <tr>
-                                        <h6>Operation Details</h6>
+                                        <h6>Account Details</h6>
                                     </tr>
+                                    <!--<tr>-->
+                                        <!--<td>Cost per this request</td>-->
+                                        <!--<td>{{CostPfunction}} Orb Coins</td>-->
+                                    <!--</tr>-->
+                                    <!--<tr>-->
+                                        <!--<td>Function Availability</td>-->
+                                        <!--<td><span class="badge">34%</span></td>-->
+                                    <!--</tr>-->
+                                    <!--<tr>-->
+                                        <!--<td>Function Health</td>-->
+                                        <!--<td><span class="badge">Medium</span></td>-->
+                                    <!--</tr>-->
                                     <tr>
-                                        <td>Cost per this request</td>
-                                        <td>$ 0.00003</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Function Availability</td>
-                                        <td><span class="badge">34%</span></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Function Health</td>
-                                        <td><span class="badge">Medium</span></td>
+                                        <td>
+                                            Check Balance <button class="btn btn-outline-dark" ng-click="testBalance()"> <i class="fa fa-refresh"></i> </button>
+                                        </td>
+                                        <td>
+                                            <h5>{{mybal}} Wei</h5>
+                                        </td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -72,14 +89,14 @@
                                 <table class="table table-striped">
                                     <thead>
                                         <tr>
-                                            <td><h6>Output</h6></td>
+                                            <td style="word-wrap: break-word;max-width: 150px"><h6>Output</h6></td>
                                             <td><h6>Execution Time</h6></td>
                                         </tr>
                                     </thead>
                                     <tbody ng-hide="hideOutput">
                                         <tr>
                                             <td>{{ans}}</td>
-                                            <td>0.045 sec</td>
+                                            <td>~1 sec</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -88,8 +105,18 @@
                     </div>
 
                     <div class="col-md-6 col-sm-6 col-lg-6">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>Recipient Address</th>
+                                <th>Amount</th>
+                                <th>Transaction #</th>
+                                <th><button ng-click="loadUsedFns()" class="btn btn-outline-dark"><i class="fa fa-refresh"></i> </button></th>
+                            </tr>
+                            </thead>
+                            <tbody id="paymentsForCalling">
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
