--- a/public/editor.html
+++ b/public/editor.html
@@ -33,10 +33,15 @@
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
-            <a href="dashboard.html">Dashboard</a>
+            <a>Dashboard</a>
         </li>
         <li class="breadcrumb-item active">Inline Code Editor</li>
     </ol>
+    <div id="progressBX" style="margin-bottom: 10px" class="col-md-12">
+        <div class="progress">
+            <div  class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+        </div>
+    </div>
     <div class="card mb-3">
         <div class="card-body">
             <div class="container-fluid">
@@ -78,13 +83,16 @@
                             <div class="col-md-12" id="code"></div>
                             <div class="col-md-8">
                                 <table class="table table-striped">
-                                    <tbody>
-                                        <tr>
-                                            <h6>Recent Function Deployments</h6>
-                                        </tr>
-                                        <tr ng-repeat="func in allFuncs">
-                                            <td>{{x.key}}</td>
-                                        </tr>
+                                    <tbody ng-controller="PaymentController" >
+                                    <tr>
+                                        <td>
+                                            Check Balance <button class="btn btn-outline-dark" ng-click="testBalance()"> <i class="fa fa-refresh"></i> </button>
+                                        </td>
+                                        <td>
+                                            <h5>{{mybal}} Wei</h5>
+                                        </td>
+                                    </tr>
+
                                     </tbody>
                                 </table>
                             </div>
