--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 <body class="fixed-nav sticky-footer bg-dark"   id="page-top" ng-app="orb">
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-  <a class="navbar-brand" href="dashboard.html">The Orb</a>
+  <a class="navbar-brand" href="#!/editor">The Orb</a>
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,9 +47,9 @@
           <span class="nav-link-text">My Functions</span>
         </a>
         <ul class="sidenav-second-level collapse" id="collapseComponents">
-          <li>
-            <a href="#!/deploy">Available Functions</a>
-          </li>
+          <!--<li>-->
+            <!--<a href="#!/deploy">Available Functions</a>-->
+          <!--</li>-->
           <li>
             <a href="#!/editor">Inline Code Editor</a>
           </li>
@@ -64,9 +64,9 @@
           <span class="nav-link-text">My Wallet</span>
         </a>
         <ul class="sidenav-second-level collapse" id="collapseExamplePages">
-          <li>
-            <a href="#!/fstore">Stored Functions</a>
-          </li>
+          <!--<li>-->
+            <!--<a href="#!/fstore">Stored Functions</a>-->
+          <!--</li>-->
           <li>
             <a href="#!/wdash">Wallet Dashboard</a>
           </li>
@@ -250,13 +250,14 @@
 <script>require('./controllers/orb.controller')</script>
 <script>require('./controllers/editor.controller')</script>
 <script>require('./controllers/coin.controller')</script>
+<script>require('./controllers/payments.controller')</script>
 
 <script>require('./services/orb')</script>
 <script>require('./services/payment.service')</script>
 <script>require('./services/temp.service')</script>
 <script>require('./services/persistance.service')</script>
-<script>require('./controllers/payments.controller')</script>
 <script>require('./services/coin.service')</script>
+<script>require('./services/web3.service')</script>
 
 <script>
     $(function() {
