--- a/public/callFunction.html
+++ b/public/callFunction.html
@@ -89,13 +89,13 @@
                                 <table class="table table-striped">
                                     <thead>
                                         <tr>
-                                            <td style="word-wrap: break-word;max-width: 150px"><h6>Output</h6></td>
+                                            <td><h6>Output</h6></td>
                                             <td><h6>Execution Time</h6></td>
                                         </tr>
                                     </thead>
                                     <tbody ng-hide="hideOutput">
                                         <tr>
-                                            <td>{{ans}}</td>
+                                            <td style="word-wrap: break-word;max-width: 150px">{{ans}}</td>
                                             <td>~1 sec</td>
                                         </tr>
                                     </tbody>
